--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿annotated-types==0.7.0
+annotated-types==0.7.0
 anyio==4.10.0
 blinker==1.9.0
 cachetools==5.5.2
@@ -7,6 +7,7 @@ charset-normalizer==3.4.3
 click==8.2.1
 colorama==0.4.6
 defusedxml==0.7.1
+distro==1.9.0
 filetype==1.2.0
 Flask==3.1.1
 fonttools==4.59.1
@@ -30,6 +31,7 @@ httpx==0.28.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jiter==0.11.0
 jsonpatch==1.33
 jsonpointer==3.0.0
 langchain-core==0.3.74
@@ -38,6 +40,7 @@ langsmith==0.4.14
 MarkupSafe==3.0.2
 oauth2client==4.1.3
 oauthlib==3.3.1
+openai==1.109.1
 orjson==3.11.2
 packaging==25.0
 pillow==11.3.0
