--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ blinker==1.9.0
 cachetools==5.5.2
 certifi==2025.8.3
 charset-normalizer==3.4.3
-click==8.2.1
+click>=8.0.0
 colorama==0.4.6
 defusedxml==0.7.1
 distro==1.9.0
@@ -67,3 +67,4 @@ uritemplate==4.2.0
 urllib3==2.5.0
 Werkzeug==3.1.3
 zstandard==0.24.0
+cryptography
